<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PracticeApp</string>
    <string name="action_settings">Settings</string>
    <string name="make_call">Make A Call</string>
    <string name="set_remainder">Set Calendar, Set Remainder</string>
    <string name="open_browser">Open Browser</string>
    <string name="manage_address_book">Manage Address Book</string>
    <string name="my_location">Show My Location, Take Me Somewhere</string>
    <string name="send_message">SEND - READ SMS Messages</string>
    <string name="title_activity_calendar">Set Reminder</string>
    <string name="save_remainder">Save Remainder</string>
    <string name="reminder_hint">Enter what to remind here ...</string>
    <string name="title_activity_sms">SMS Activity</string>
    <string name="show_message">Show Inbox Messages</string>
    <string name="compose_message">Compose Messsage</string>
    <string name="title_activity_smslist_activiy">Inbox Messages</string>
    <string name="title_activity_contact_list">Contacts List</string>
    <string name="show_current_location">Show Current Location</string>
    <string name="enter_address">Enter Address</string>
    <string name="street">Street</string>
    <string name="city">City/Town</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="search_location">Search Location</string>
    <string name="title_activity_compose_sms">Compose SMS</string>
    <string name="phone_num_hint">Enter Phone Number ...</string>
    <string name="enter_message">Enter your message ...</string>
    <string name="send_sms">Send Message</string>
    <string name="speak">Speak</string>
    <string name="title_activity_location">Location</string>
    <string name="add_remainder">Add Remainder</string>
    <string name="action_home">Home</string>

</resources>