<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.akshay.practiceapp.app.MainActivity" >

    <Button
        android:id="@+id/button_make_call"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/make_call" 
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button_calendar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/set_remainder" 
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button_browser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/open_browser" 
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button_address_book"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/manage_address_book" 
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button_location"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/my_location" 
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button_sms"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/send_message" 
        android:layout_weight="1"/>

</LinearLayout>
